[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Menu/img_tile_white.png" type="Texture" id=1]
[ext_resource path="res://objFactoryTile.gd" type="Script" id=2]
[ext_resource path="res://Assets/Tileables/img_factorytile.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="CircleShape2D" id=3]
radius = 2.0

[node name="objFactoryTile" type="TouchScreenButton"]
self_modulate = Color( 1, 1, 1, 0 )
normal = ExtResource( 1 )
shape = SubResource( 1 )
script = ExtResource( 2 )

[node name="areaTile" type="Area2D" parent="."]

[node name="shapeTile" type="CollisionShape2D" parent="areaTile"]
position = Vector2( 16, 16 )
shape = SubResource( 2 )

[node name="areaCenter" type="Area2D" parent="."]

[node name="shapeCenter" type="CollisionShape2D" parent="areaCenter"]
position = Vector2( 16, 16 )
shape = SubResource( 3 )

[node name="texTile" type="TextureRect" parent="."]
margin_right = 32.0
margin_bottom = 32.0
mouse_filter = 2
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="." to="." method="_on_objFactoryTile_pressed"]
[connection signal="released" from="." to="." method="_on_objFactoryTile_released"]
[connection signal="mouse_entered" from="areaTile" to="." method="_on_areaTile_mouse_entered"]
[connection signal="mouse_exited" from="areaTile" to="." method="_on_areaTile_mouse_exited"]
